--- a/semantic.ipynb
+++ b/semantic.ipynb
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "91573e76-3271-486b-b650-1b789bf3e2ef",
    "metadata": {
     "tags": []
@@ -618,7 +618,8 @@
      "output_type": "stream",
      "text": [
       "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ec2-user/.config/sagemaker/config.yaml\n"
+      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ec2-user/.config/sagemaker/config.yaml\n",
+      "----!"
      ]
     }
    ],
