updated with arn

--- a/semantic.ipynb
+++ b/semantic.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "5aa0d7ad",
    "metadata": {
     "tags": []
@@ -122,8 +122,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ec2-user/.config/sagemaker/config.yaml\n",
       "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
       "sagemaker.config INFO - Not applying SDK defaults from location: /home/ec2-user/.config/sagemaker/config.yaml\n",
       "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
@@ -542,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "6acf5b60-1c49-411c-9c47-1ff6998f2d5b",
    "metadata": {
     "tags": []
@@ -572,15 +570,26 @@
     "\n",
     "\n",
     "# Create the SageMaker model instance\n",
+    "# model_predictor = Model(\n",
+    "#     image_uri=deploy_image_uri,\n",
+    "#     source_dir=deploy_source_uri,\n",
+    "#     model_data=base_model_uri,\n",
+    "#     entry_point=\"inference.py\",  # entry point file in source_dir and present in deploy_source_uri\n",
+    "#     role=aws_role,\n",
+    "#     predictor_cls=Predictor,\n",
+    "#     name=endpoint_name,\n",
+    "# )\n",
+    "\n",
     "model_predictor = Model(\n",
-    "    image_uri=deploy_image_uri,\n",
-    "    source_dir=deploy_source_uri,\n",
-    "    model_data=base_model_uri,\n",
+    "    image_uri='763104351884.dkr.ecr.us-east-1.amazonaws.com/mxnet-inference:1.9.0-cpu-py38',\n",
+    "    source_dir='s3://jumpstart-cache-prod-us-east-1/source-directory-tarballs/mxnet/inference/semseg/v1.2.1/sourcedir.tar.gz',\n",
+    "    model_data='s3://jumpstart-cache-prod-us-east-1/mxnet-infer/v1.1.0/infer-mxnet-semseg-fcn-resnet101-coco.tar.gz',\n",
     "    entry_point=\"inference.py\",  # entry point file in source_dir and present in deploy_source_uri\n",
     "    role=aws_role,\n",
     "    predictor_cls=Predictor,\n",
-    "    name=endpoint_name,\n",
-    ")"
+    "    name='jumpstart-example-infer-mxnet-semseg-fc-2023-10-28-03-29-08-394'\n",
+    ")\n",
+    "\n"
    ]
   },
   {
@@ -635,6 +644,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "953b30b7-1702-4380-b696-fc65df299137",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Models': [{'ModelName': 'jumpstart-example-infer-mxnet-semseg-fc-2023-10-28-03-29-08-394',\n",
+       "   'ModelArn': 'arn:aws:sagemaker:us-east-1:287758680514:model/jumpstart-example-infer-mxnet-semseg-fc-2023-10-28-03-29-08-394',\n",
+       "   'CreationTime': datetime.datetime(2023, 10, 28, 4, 5, 53, 811000, tzinfo=tzlocal())},\n",
+       "  {'ModelName': 'AsyncInferenceDemo-Model-2023-10-27-06-32-21',\n",
+       "   'ModelArn': 'arn:aws:sagemaker:us-east-1:287758680514:model/asyncinferencedemo-model-2023-10-27-06-32-21',\n",
+       "   'CreationTime': datetime.datetime(2023, 10, 27, 6, 33, 56, 671000, tzinfo=tzlocal())}],\n",
+       " 'ResponseMetadata': {'RequestId': 'b6ef3ab3-0338-47eb-89b0-7aadd93ddf45',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': 'b6ef3ab3-0338-47eb-89b0-7aadd93ddf45',\n",
+       "   'content-type': 'application/x-amz-json-1.1',\n",
+       "   'content-length': '446',\n",
+       "   'date': 'Sat, 28 Oct 2023 19:08:45 GMT'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sagemaker_client = boto3.client('sagemaker')\n",
+    "# from sagemaker import list-models\n",
+    "response = sagemaker_client.list_models()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "id": "7aca8177-6835-4ba7-b038-4b3ea38d859c",
    "metadata": {
@@ -654,6 +701,109 @@
    ],
    "source": [
     "endpoint_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "79ec9938-9fe3-4486-b5c5-20b1af1fd226",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "jumpstart_assets_s3_bucket = f\"jumpstart-cache-prod-{aws_region}\"\n",
+    "pedestrian_img_key_prefix = \"inference-notebook-assets\"\n",
+    "pedestrian_img = \"img_pedestrian.png\"\n",
+    "\n",
+    "boto3.client(\"s3\").download_file(\n",
+    "    jumpstart_assets_s3_bucket, f\"{pedestrian_img_key_prefix}/{pedestrian_img}\", pedestrian_img\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5883304d-be2d-48d8-8fa4-8b27308147d1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "\n",
+    "def query(model_predictor, image_file_name):\n",
+    "    \"\"\"Query the model predictor.\"\"\"\n",
+    "\n",
+    "    with open(image_file_name, \"rb\") as file:\n",
+    "        input_img_rb = file.read()\n",
+    "\n",
+    "    query_response = model_predictor.predict(\n",
+    "        input_img_rb,\n",
+    "        {\n",
+    "            \"ContentType\": \"application/x-image\",\n",
+    "            \"Accept\": \"application/json;verbose\",\n",
+    "        },\n",
+    "    )\n",
+    "    return query_response\n",
+    "\n",
+    "\n",
+    "def parse_response(query_response):\n",
+    "    \"\"\"Parse response and return predictions as well as the set of all labels and object labels present in the image.\"\"\"\n",
+    "    response_dict = json.loads(query_response)\n",
+    "    return response_dict[\"predictions\"], response_dict[\"labels\"], response_dict[\"image_labels\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9a78cbd2-0fbc-4e97-9bd1-46e510cc63e9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'async_predictor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m query_response \u001b[38;5;241m=\u001b[39m query(\u001b[43masync_predictor\u001b[49m, pedestrian_img)\n\u001b[1;32m      3\u001b[0m predictions, labels, image_labels \u001b[38;5;241m=\u001b[39m parse_response(query_response)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mObjects present in the picture:\u001b[39m\u001b[38;5;124m\"\u001b[39m, image_labels)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'async_predictor' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "query_response = query(async_predictor, pedestrian_img)\n",
+    "\n",
+    "predictions, labels, image_labels = parse_response(query_response)\n",
+    "print(\"Objects present in the picture:\", image_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "72e09315-42a3-486f-8e82-baab668a7d0a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'async_predictor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43masync_predictor\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'async_predictor' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "async_predictor"
    ]
   },
   {
