cleaned up. didn't work with sync end pt

--- a/semantic-segmentation-sync.ipynb
+++ b/semantic-segmentation-sync.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "352da965-69c2-460f-a566-38e774c5776a",
    "metadata": {
     "tags": []
@@ -194,6 +194,146 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "a1bcda6d-d089-4939-bf0b-c1d52707afcc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "\n",
+    "def query(model_predictor, image_file_name):\n",
+    "    \"\"\"Query the model predictor.\"\"\"\n",
+    "\n",
+    "    with open(image_file_name, \"rb\") as file:\n",
+    "        input_img_rb = file.read()\n",
+    "\n",
+    "    query_response = model_predictor.predict(\n",
+    "        input_img_rb,\n",
+    "        {\n",
+    "            \"ContentType\": \"application/x-image\",\n",
+    "            \"Accept\": \"application/json;verbose\",\n",
+    "        },\n",
+    "    )\n",
+    "    return query_response\n",
+    "\n",
+    "\n",
+    "def parse_response(query_response):\n",
+    "    \"\"\"Parse response and return predictions as well as the set of all labels and object labels present in the image.\"\"\"\n",
+    "    response_dict = json.loads(query_response)\n",
+    "    return response_dict[\"predictions\"], response_dict[\"labels\"], response_dict[\"image_labels\"]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ba8f871-48c4-44da-8d8f-5b315e2038c1",
+   "metadata": {},
+   "source": [
+    "## how to load base_model_predictor?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "e6ea4b60-4fb7-465a-af39-bbb5dfa87b95",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "ValidationError",
+     "evalue": "An error occurred (ValidationError) when calling the InvokeEndpoint operation: Endpoint jumpstart-example-infer-mxnet-semseg-fc-2023-10-28-23-35-59-368 does not support this inference type.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValidationError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[23], line 9\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(image_file_name, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[1;32m      6\u001b[0m         input_img_rb \u001b[38;5;241m=\u001b[39m file\u001b[38;5;241m.\u001b[39mread()\n\u001b[0;32m----> 9\u001b[0m \u001b[43msm_runtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minvoke_endpoint\u001b[49m\u001b[43m(\u001b[49m\u001b[43mEndpointName\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mjumpstart-example-infer-mxnet-semseg-fc-2023-10-28-23-35-59-368\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mBody\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minput_img_rb\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[43m                          \u001b[49m\u001b[43mContentType\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mapplication/x-image\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[43m                           \u001b[49m\u001b[43mAccept\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mapplication/json;verbose\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\n\u001b[1;32m     12\u001b[0m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m#base_model_predictor = \u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages/botocore/client.py:535\u001b[0m, in \u001b[0;36mClientCreator._create_api_method.<locals>._api_call\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    531\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[1;32m    532\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpy_operation_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m() only accepts keyword arguments.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    533\u001b[0m     )\n\u001b[1;32m    534\u001b[0m \u001b[38;5;66;03m# The \"self\" in this scope is referring to the BaseClient.\u001b[39;00m\n\u001b[0;32m--> 535\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_make_api_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43moperation_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages/botocore/client.py:980\u001b[0m, in \u001b[0;36mBaseClient._make_api_call\u001b[0;34m(self, operation_name, api_params)\u001b[0m\n\u001b[1;32m    978\u001b[0m     error_code \u001b[38;5;241m=\u001b[39m parsed_response\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mError\u001b[39m\u001b[38;5;124m\"\u001b[39m, {})\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCode\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    979\u001b[0m     error_class \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mexceptions\u001b[38;5;241m.\u001b[39mfrom_code(error_code)\n\u001b[0;32m--> 980\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m error_class(parsed_response, operation_name)\n\u001b[1;32m    981\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    982\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parsed_response\n",
+      "\u001b[0;31mValidationError\u001b[0m: An error occurred (ValidationError) when calling the InvokeEndpoint operation: Endpoint jumpstart-example-infer-mxnet-semseg-fc-2023-10-28-23-35-59-368 does not support this inference type."
+     ]
+    }
+   ],
+   "source": [
+    "sm_runtime = boto_session.client(\"sagemaker-runtime\")\n",
+    "\n",
+    "image_file_name = \"img_pedestrian.png\"\n",
+    "\n",
+    "with open(image_file_name, \"rb\") as file:\n",
+    "        input_img_rb = file.read()\n",
+    "\n",
+    "        \n",
+    "sm_runtime.invoke_endpoint(EndpointName='jumpstart-example-infer-mxnet-semseg-fc-2023-10-28-23-35-59-368', Body=input_img_rb,\n",
+    "                          ContentType=\"application/x-image\",\n",
+    "                           Accept=\"application/json;verbose\"\n",
+    "        )\n",
+    "#base_model_predictor = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b9c46d57-b80a-459b-89a8-23fe033c94c6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'base_model_predictor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m query_response \u001b[38;5;241m=\u001b[39m query(\u001b[43mbase_model_predictor\u001b[49m, pedestrian_img)\n\u001b[1;32m      3\u001b[0m predictions, labels, image_labels \u001b[38;5;241m=\u001b[39m parse_response(query_response)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mObjects present in the picture:\u001b[39m\u001b[38;5;124m\"\u001b[39m, image_labels)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'base_model_predictor' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "query_response = query(basea_model_predictor, pedestrian_img)\n",
+    "\n",
+    "predictions, labels, image_labels = parse_response(query_response)\n",
+    "print(\"Objects present in the picture:\", image_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea791dd7-6170-4173-b6a4-b089681b69aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f37b3f9b-543a-4392-a80e-123e0abd0259",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44855ce7-4abb-4654-886f-bf6224de967e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bbe8d0d-4764-49d3-89b6-8ab2f61615b7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "id": "d53d6bab-58e1-4e62-b533-b03ca546b706",
    "metadata": {
@@ -201,17 +341,17 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
+    "# import os\n",
     "\n",
     "\n",
-    "def upload_file(input_location):\n",
-    "    prefix = f\"{bucket_prefix}/input\"\n",
-    "    return sm_session.upload_data(\n",
-    "        input_location,\n",
-    "        bucket=sm_session.default_bucket(),\n",
-    "        key_prefix=prefix,\n",
-    "        extra_args={\"ContentType\": \"text/libsvm\"},\n",
-    "    )"
+    "# def upload_file(input_location):\n",
+    "#     prefix = f\"{bucket_prefix}/input\"\n",
+    "#     return sm_session.upload_data(\n",
+    "#         input_location,\n",
+    "#         bucket=sm_session.default_bucket(),\n",
+    "#         key_prefix=prefix,\n",
+    "#         extra_args={\"ContentType\": \"text/libsvm\"},\n",
+    "#     )"
    ]
   },
   {
@@ -223,7 +363,7 @@
    },
    "outputs": [],
    "source": [
-    "async_upload_loc = upload_file('img_pedestrian.png')"
+    "# async_upload_loc = upload_file('img_pedestrian.png')"
    ]
   },
   {
