async giving libsvm error

--- a/semantic-segmentation-async-partially-working.ipynb
+++ b/semantic-segmentation-async-partially-working.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "e050544c-d534-4790-989a-c4d592dd3b8c",
    "metadata": {
     "tags": []
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "12b61fb4-e572-4ab3-bd97-0c74f3c80aa3",
    "metadata": {
     "tags": []
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "352da965-69c2-460f-a566-38e774c5776a",
    "metadata": {
     "tags": []
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "f5a908d9-f9e6-4f00-a1cd-0444bed5cea6",
    "metadata": {
     "tags": []
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "91573e76-3271-486b-b650-1b789bf3e2ef",
    "metadata": {
     "tags": []
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "7aca8177-6835-4ba7-b038-4b3ea38d859c",
    "metadata": {
     "tags": []
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "id": "a1bcda6d-d089-4939-bf0b-c1d52707afcc",
    "metadata": {
     "tags": []
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "774c5e90-a378-43b4-8d12-6ebdfc7d23e6",
    "metadata": {
     "tags": []
@@ -254,31 +254,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "e6ea4b60-4fb7-465a-af39-bbb5dfa87b95",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
    "source": [
     "sm_runtime = boto_session.client(\"sagemaker-runtime\")\n",
     "\n",
-    "image_file_name = \"img_pedestrian.png\"\n",
+    "# image_file_name = \"img_pedestrian.png\"\n",
     "\n",
-    "with open(image_file_name, \"rb\") as file:\n",
-    "        input_img_rb = file.read()\n",
+    "# with open(image_file_name, \"rb\") as file:\n",
+    "#         input_img_rb = file.read()\n",
     "\n",
     "        \n",
     "# sm_runtime.invoke_endpoint_async(EndpointName='jumpstart-example-infer-mxnet-semseg-fc-2023-10-28-23-35-59-368', Body=input_img_rb,\n",
     "#                           ContentType=\"application/x-image\",\n",
     "#                            Accept=\"application/json;verbose\"\n",
     "#         )\n",
-    "async_resp = sm_runtime.invoke_endpoint_async(EndpointName='jumpstart-example-infer-mxnet-semseg-fc-2023-10-28-23-35-59-368', \n",
+    "# async_resp = sm_runtime.invoke_endpoint_async(EndpointName='jumpstart-example-infer-mxnet-semseg-fc-2023-10-28-23-35-59-368', \n",
+    "#                                  InputLocation=input_img_s3\n",
+    "#         )\n",
+    "\n",
+    "async_resp = sm_runtime.invoke_endpoint_async(EndpointName='semantec-segmentation-async-with-sns', \n",
     "                                 InputLocation=input_img_s3\n",
     "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "522cc827-2ca6-4a32-bcc6-46d061279582",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ResponseMetadata': {'RequestId': '22c8451e-1921-4cba-a577-f6c37311848d',\n",
+       "  'HTTPStatusCode': 202,\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '22c8451e-1921-4cba-a577-f6c37311848d',\n",
+       "   'x-amzn-sagemaker-outputlocation': 's3://sagemaker-us-east-1-287758680514/DEMO-async-inference/output/85078f5c-d749-49d9-a885-b51815d0c0d8.out',\n",
+       "   'x-amzn-sagemaker-failurelocation': 's3://sagemaker-us-east-1-287758680514/DEMO-async-inference/failure/85078f5c-d749-49d9-a885-b51815d0c0d8-error.out',\n",
+       "   'date': 'Fri, 03 Nov 2023 01:53:30 GMT',\n",
+       "   'content-type': 'application/json',\n",
+       "   'content-length': '54',\n",
+       "   'connection': 'keep-alive'},\n",
+       "  'RetryAttempts': 0},\n",
+       " 'OutputLocation': 's3://sagemaker-us-east-1-287758680514/DEMO-async-inference/output/85078f5c-d749-49d9-a885-b51815d0c0d8.out',\n",
+       " 'FailureLocation': 's3://sagemaker-us-east-1-287758680514/DEMO-async-inference/failure/85078f5c-d749-49d9-a885-b51815d0c0d8-error.out',\n",
+       " 'InferenceId': '5f3ee66c-4ca2-4515-a63a-6fd8a2199fa5'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "async_resp"
    ]
   },
   {
@@ -338,7 +374,7 @@
    ],
    "source": [
     "\n",
-    "query_response = query(basea_model_predictor, pedestrian_img)\n",
+    "query_response = query(base_model_predictor, pedestrian_img)\n",
     "\n",
     "predictions, labels, image_labels = parse_response(query_response)\n",
     "print(\"Objects present in the picture:\", image_labels)"
@@ -379,30 +415,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "44855ce7-4abb-4654-886f-bf6224de967e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'ResponseMetadata': {'RequestId': '9b880701-afae-421c-b4e8-e15dc59ca33c',\n",
-       "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': '9b880701-afae-421c-b4e8-e15dc59ca33c',\n",
-       "   'x-amzn-invoked-production-variant': 'AllTraffic',\n",
-       "   'date': 'Mon, 30 Oct 2023 05:22:02 GMT',\n",
-       "   'content-type': 'application/json;verbose',\n",
-       "   'content-length': '1529426',\n",
-       "   'connection': 'keep-alive'},\n",
-       "  'RetryAttempts': 0},\n",
-       " 'ContentType': 'application/json;verbose',\n",
-       " 'InvokedProductionVariant': 'AllTraffic',\n",
-       " 'Body': <botocore.response.StreamingBody at 0x7f625f42ab30>}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'resp' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mresp\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'resp' is not defined"
+     ]
     }
    ],
    "source": [
