working asyn call

--- a/semantic-segmentation-async-partially-working.ipynb
+++ b/semantic-segmentation-async-partially-working.ipynb
@@ -231,12 +231,12 @@
    "id": "7ba8f871-48c4-44da-8d8f-5b315e2038c1",
    "metadata": {},
    "source": [
-    "## how to load base_model_predictor?"
+    "## testing async predictor for semantec segmentation Nov 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "774c5e90-a378-43b4-8d12-6ebdfc7d23e6",
    "metadata": {
     "tags": []
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "e6ea4b60-4fb7-465a-af39-bbb5dfa87b95",
    "metadata": {
     "tags": []
@@ -278,13 +278,15 @@
     "#         )\n",
     "\n",
     "async_resp = sm_runtime.invoke_endpoint_async(EndpointName='semantec-segmentation-async-with-sns', \n",
-    "                                 InputLocation=input_img_s3\n",
+    "                                 InputLocation=input_img_s3,\n",
+    "                                              ContentType=\"application/x-image\",\n",
+    "                                              Accept= \"application/json;verbose\"\n",
     "        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "522cc827-2ca6-4a32-bcc6-46d061279582",
    "metadata": {
     "tags": []
@@ -293,22 +295,22 @@
     {
      "data": {
       "text/plain": [
-       "{'ResponseMetadata': {'RequestId': '22c8451e-1921-4cba-a577-f6c37311848d',\n",
+       "{'ResponseMetadata': {'RequestId': '63e21c9d-3bc4-46cf-8fc1-ecca5681f891',\n",
        "  'HTTPStatusCode': 202,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': '22c8451e-1921-4cba-a577-f6c37311848d',\n",
-       "   'x-amzn-sagemaker-outputlocation': 's3://sagemaker-us-east-1-287758680514/DEMO-async-inference/output/85078f5c-d749-49d9-a885-b51815d0c0d8.out',\n",
-       "   'x-amzn-sagemaker-failurelocation': 's3://sagemaker-us-east-1-287758680514/DEMO-async-inference/failure/85078f5c-d749-49d9-a885-b51815d0c0d8-error.out',\n",
-       "   'date': 'Fri, 03 Nov 2023 01:53:30 GMT',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '63e21c9d-3bc4-46cf-8fc1-ecca5681f891',\n",
+       "   'x-amzn-sagemaker-outputlocation': 's3://sagemaker-us-east-1-287758680514/DEMO-async-inference/output/91d668cf-5f4a-4cdf-9e6f-1498610b0ab7.out',\n",
+       "   'x-amzn-sagemaker-failurelocation': 's3://sagemaker-us-east-1-287758680514/DEMO-async-inference/failure/91d668cf-5f4a-4cdf-9e6f-1498610b0ab7-error.out',\n",
+       "   'date': 'Fri, 03 Nov 2023 22:51:30 GMT',\n",
        "   'content-type': 'application/json',\n",
        "   'content-length': '54',\n",
        "   'connection': 'keep-alive'},\n",
        "  'RetryAttempts': 0},\n",
-       " 'OutputLocation': 's3://sagemaker-us-east-1-287758680514/DEMO-async-inference/output/85078f5c-d749-49d9-a885-b51815d0c0d8.out',\n",
-       " 'FailureLocation': 's3://sagemaker-us-east-1-287758680514/DEMO-async-inference/failure/85078f5c-d749-49d9-a885-b51815d0c0d8-error.out',\n",
-       " 'InferenceId': '5f3ee66c-4ca2-4515-a63a-6fd8a2199fa5'}"
+       " 'OutputLocation': 's3://sagemaker-us-east-1-287758680514/DEMO-async-inference/output/91d668cf-5f4a-4cdf-9e6f-1498610b0ab7.out',\n",
+       " 'FailureLocation': 's3://sagemaker-us-east-1-287758680514/DEMO-async-inference/failure/91d668cf-5f4a-4cdf-9e6f-1498610b0ab7-error.out',\n",
+       " 'InferenceId': 'f8a9713e-377d-4eff-96db-19e557d850cc'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
